--- a/models/silver/hourly_prices/silver__token_prices_all_providers_hourly.yml
+++ b/models/silver/hourly_prices/silver__token_prices_all_providers_hourly.yml
@@ -6,6 +6,9 @@ models:
           combination_of_columns:
             - HOUR
             - TOKEN_ADDRESS
+            - SYMBOL
+            - PLATFORM
+            - PROVIDER
     columns:
       - name: HOUR
         description: Hour that the price was recorded at
@@ -21,8 +24,20 @@ models:
         description: Address of the token
       - name: SYMBOL
         description: Symbol of the token
+        tests:
+          - not_null
       - name: DECIMALS
         description: The number of decimals for token contract
+        tests:
+          - not_null
+      - name: PLATFORM
+        description: Blockchain or Network token price is recorded on.
+        tests:
+          - not_null
+      - name: PROVIDER
+        description: Source of the token price.
+        tests:
+          - not_null
       - name: PRICE
         description: Closing price of the recorded hour in USD
         tests: 
