--- a/models/core/core__ez_hourly_prices.yml
+++ b/models/core/core__ez_hourly_prices.yml
@@ -2,7 +2,12 @@ version: 2
 models:
   - name: core__ez_hourly_prices
     description: A convenience table for determining token prices by address and blockchain.
-
+    tests:
+      - dbt_utils.unique_combination_of_columns:
+          combination_of_columns:
+            - HOUR
+            - TOKEN_ADDRESS
+            - BLOCKCHAIN
     columns:
       - name: HOUR
         description: Hour that the price was recorded at
