--- a/models/sources.yml
+++ b/models/sources.yml
@@ -184,7 +184,29 @@ sources:
     database: osmosis
     schema: core
     tables:
+      - name: fact_blocks
+      - name: fact_governance_votes
+      - name: fact_transactions
       - name: fact_transfers
+      - name: fact_validators
+  - name: axelar_core
+    database: axelar
+    schema: core
+    tables:
+      - name: fact_blocks
+      - name: fact_governance_votes
+      - name: fact_transactions
+      - name: fact_transfers
+      - name: fact_validators
+  - name: cosmos_core
+    database: cosmos
+    schema: core
+    tables:
+      - name: fact_blocks
+      - name: fact_governance_votes
+      - name: fact_transactions
+      - name: fact_transfers
+      - name: fact_validators
   - name: bronze_streamline
     database: streamline
     schema: crosschain
