--- a/models/silver/hourly_prices/silver__token_prices_priority_hourly.yml
+++ b/models/silver/hourly_prices/silver__token_prices_priority_hourly.yml
@@ -24,6 +24,10 @@ models:
       - name: PRICE
         tests: 
           - not_null
+      - name: SYMBOL
+        tests:
+          - not_null
+      - name: DECIMALS
       - name: IS_IMPUTED
         tests: 
           - not_null
