--- a/models/sources.yml
+++ b/models/sources.yml
@@ -37,6 +37,7 @@ sources:
       - name: ez_nft_transfers
       - name: ez_current_balances
       - name: ez_dex_swaps
+      - name: dim_contracts
   - name: ethereum_silver
     database: ethereum
     schema: silver
@@ -83,6 +84,7 @@ sources:
       - name: logs
       - name: traces
       - name: transactions
+      - name: contracts
   - name: arbitrum_core
     database: arbitrum
     schema: core
@@ -97,6 +99,7 @@ sources:
       - name: traces
       - name: transactions
       - name: abis
+      - name: contracts
   - name: avalanche_core
     database: avalanche
     schema: core
@@ -111,6 +114,7 @@ sources:
       - name: traces
       - name: transactions
       - name: abis
+      - name: contracts
   - name: polygon_core
     database: polygon
     schema: core
@@ -124,6 +128,7 @@ sources:
       - name: logs
       - name: traces
       - name: transactions
+      - name: contracts
   - name: optimism_core
     database: optimism
     schema: core
