--- a/models/sources.yml
+++ b/models/sources.yml
@@ -77,6 +77,7 @@ sources:
     schema: core
     tables:
       - name: ez_transfer
+      - name: dim_asset
   - name: arbitrum_silver
     database: arbitrum
     schema: silver
