--- a/models/sources.yml
+++ b/models/sources.yml
@@ -190,6 +190,7 @@ sources:
       - name: asset_metadata
       - name: prices_swaps
       - name: pool_token_prices_usd
+      - name: swaps
   - name: osmosis_core
     database: osmosis
     schema: core
@@ -288,3 +289,19 @@ sources:
       - name: dim_distributor_reward_schedule
       - name: ez_lending
       - name: ez_borrowing
+
+  - name: ethereum_silver_dex
+    database: ethereum
+    schema: silver_dex
+    tables:
+      - name: complete_dex_swaps
+  - name: optimism_silver_dex
+    database: optimism
+    schema: silver_dex
+    tables:
+      - name: complete_dex_swaps
+  - name: avalanche_silver_dex
+    database: avalanche
+    schema: silver_dex
+    tables:
+      - name: complete_dex_swaps
