--- a/models/sources.yml
+++ b/models/sources.yml
@@ -43,6 +43,7 @@ sources:
     schema: silver
     tables:
       - name: logs
+      - name: decoded_logs_full
       - name: traces
       - name: transactions
       - name: labels
@@ -97,6 +98,7 @@ sources:
     schema: silver
     tables:
       - name: logs
+      - name: decoded_logs_full
       - name: traces
       - name: transactions
       - name: abis
@@ -112,6 +114,7 @@ sources:
     schema: silver
     tables:
       - name: logs
+      - name: decoded_logs_full
       - name: traces
       - name: transactions
       - name: abis
