--- a/models/sources.yml
+++ b/models/sources.yml
@@ -314,6 +314,11 @@ sources:
     schema: silver_dex
     tables:
       - name: complete_dex_swaps
+  - name: bsc_silver_dex
+    database: bsc
+    schema: silver_dex
+    tables:
+      - name: complete_dex_swaps
   - name: solana_silver
     database: solana
     schema: silver
