--- a/models/sources.yml
+++ b/models/sources.yml
@@ -176,6 +176,7 @@ sources:
     schema: core
     tables:
       - name: fact_transfers
+      - name: fact_swaps
   - name: solana_silver
     database: solana
     schema: silver
