--- a/models/defi/defi__ez_borrowing.yml
+++ b/models/defi/defi__ez_borrowing.yml
@@ -1,104 +1,104 @@
-version: 2
-models:
-  - name: defi__ez_borrowing
-    description: 'This is a table that shows all the events across various blockchains and various platforms that are related to Borrowing or repaying the loan'
+# version: 2
+# models:
+#   - name: defi__ez_borrowing
+#     description: 'This is a table that shows all the events across various blockchains and various platforms that are related to Borrowing or repaying the loan'
     
-    columns:
-      - name: BLOCK_NUMBER
-        description: '{{ doc("cross_chain_block_number") }}'
-        tests:
-          - not_null
-          - dbt_expectations.expect_column_values_to_be_in_type_list:
-              column_type_list:
-                - NUMBER
-                - FLOAT
-      - name: BLOCK_TIMESTAMP
-        description: '{{ doc("cross_chain_block_timestamp") }}'
-        tests:
-          - not_null
-          - dbt_expectations.expect_row_values_to_have_recent_data:
-              datepart: day
-              interval: 3
-          - dbt_expectations.expect_column_values_to_be_in_type_list:
-              column_type_list:
-                - TIMESTAMP_NTZ
-      - name: TX_HASH
-        description: '{{ doc("cross_chain_tx_hash") }}'
-        tests:
-          - not_null
-          - dbt_expectations.expect_column_values_to_match_regex:
-              regex: 0[xX][0-9a-fA-F]+
-      - name: LENDING_POOL_ADDRESS
-        description: '{{ doc("cross_chain_lending_pool_address") }}'
-        tests:
-          - not_null
-          - dbt_expectations.expect_column_values_to_match_regex:
-              regex: 0[xX][0-9a-fA-F]+
+#     columns:
+#       - name: BLOCK_NUMBER
+#         description: '{{ doc("cross_chain_block_number") }}'
+#         tests:
+#           - not_null
+#           - dbt_expectations.expect_column_values_to_be_in_type_list:
+#               column_type_list:
+#                 - NUMBER
+#                 - FLOAT
+#       - name: BLOCK_TIMESTAMP
+#         description: '{{ doc("cross_chain_block_timestamp") }}'
+#         tests:
+#           - not_null
+#           - dbt_expectations.expect_row_values_to_have_recent_data:
+#               datepart: day
+#               interval: 3
+#           - dbt_expectations.expect_column_values_to_be_in_type_list:
+#               column_type_list:
+#                 - TIMESTAMP_NTZ
+#       - name: TX_HASH
+#         description: '{{ doc("cross_chain_tx_hash") }}'
+#         tests:
+#           - not_null
+#           - dbt_expectations.expect_column_values_to_match_regex:
+#               regex: 0[xX][0-9a-fA-F]+
+#       - name: LENDING_POOL_ADDRESS
+#         description: '{{ doc("cross_chain_lending_pool_address") }}'
+#         tests:
+#           - not_null
+#           - dbt_expectations.expect_column_values_to_match_regex:
+#               regex: 0[xX][0-9a-fA-F]+
 
-      - name: LENDING_POOL
-        description: '{{ doc("cross_chain_lending_lending_pool") }}'
-        tests:
-          - not_null
+#       - name: LENDING_POOL
+#         description: '{{ doc("cross_chain_lending_lending_pool") }}'
+#         tests:
+#           - not_null
 
-      - name: BORROWER_IS_A_CONTRACT
-        description: '{{ doc("crosschain_lending_borrower_is_a_contract") }}'
-        tests:
-          - not_null
+#       - name: BORROWER_IS_A_CONTRACT
+#         description: '{{ doc("crosschain_lending_borrower_is_a_contract") }}'
+#         tests:
+#           - not_null
 
-      - name: AMOUNT
-        description: '{{ doc("crosschain_borrow_amount") }}'
-        tests:
-          - dbt_expectations.expect_column_values_to_be_in_type_list:
-              column_type_list:
-                - NUMBER
-                - FLOAT
-      - name: AMOUNT_USD
-        description: '{{ doc("crosschain_borrow_amount_usd") }}'
-        tests:
-          - dbt_expectations.expect_column_values_to_be_in_type_list:
-              column_type_list:
-                - NUMBER
-                - FLOAT
+#       - name: AMOUNT
+#         description: '{{ doc("crosschain_borrow_amount") }}'
+#         tests:
+#           - dbt_expectations.expect_column_values_to_be_in_type_list:
+#               column_type_list:
+#                 - NUMBER
+#                 - FLOAT
+#       - name: AMOUNT_USD
+#         description: '{{ doc("crosschain_borrow_amount_usd") }}'
+#         tests:
+#           - dbt_expectations.expect_column_values_to_be_in_type_list:
+#               column_type_list:
+#                 - NUMBER
+#                 - FLOAT
 
-      - name: SYMBOL
-        description: '{{ doc("crosschain_borrow_symbol") }}'
-        tests:
-          - dbt_expectations.expect_column_values_to_be_in_type_list:
-              column_type_list:
-                - STRING
-                - VARCHAR
+#       - name: SYMBOL
+#         description: '{{ doc("crosschain_borrow_symbol") }}'
+#         tests:
+#           - dbt_expectations.expect_column_values_to_be_in_type_list:
+#               column_type_list:
+#                 - STRING
+#                 - VARCHAR
     
-      - name: ACTION
-        description: '{{ doc("crosschain_borrow_action") }}'
+#       - name: ACTION
+#         description: '{{ doc("crosschain_borrow_action") }}'
 
 
-      - name: BORROWER
-        description: '{{ doc("crosschain_borrower") }}'
-        tests:
-          - not_null:
-              where: BLOCK_TIMESTAMP > '2021-08-01'
-          - dbt_expectations.expect_column_values_to_match_regex:
-              regex: 0[xX][0-9a-fA-F]+
+#       - name: BORROWER
+#         description: '{{ doc("crosschain_borrower") }}'
+#         tests:
+#           - not_null:
+#               where: BLOCK_TIMESTAMP > '2021-08-01'
+#           - dbt_expectations.expect_column_values_to_match_regex:
+#               regex: 0[xX][0-9a-fA-F]+
      
-      - name: PLATFORM
-        description: '{{ doc("cross_chain_swap_platform") }}'
-        tests:
-          - dbt_expectations.expect_column_values_to_be_in_type_list:
-              column_type_list:
-                - STRING
-                - VARCHAR
-      - name: _LOG_ID
-        description: '{{ doc("cross_chain_event_log_id") }}'
-        tests:
-          - not_null
-      - name: ORIGIN_FROM_ADDRESS
-        description: '{{ doc("crosschain_lending_origin_from_address") }}'
-        tests:
-          - not_null
-          - dbt_expectations.expect_column_values_to_match_regex:
-              regex: 0[xX][0-9a-fA-F]+
-      - name: ORIGIN_TO_ADDRESS
-        description: '{{ doc("crosschain_lending_origin_to_address") }}'
-        tests:
-          - dbt_expectations.expect_column_values_to_match_regex:
-              regex: 0[xX][0-9a-fA-F]+
+#       - name: PLATFORM
+#         description: '{{ doc("cross_chain_swap_platform") }}'
+#         tests:
+#           - dbt_expectations.expect_column_values_to_be_in_type_list:
+#               column_type_list:
+#                 - STRING
+#                 - VARCHAR
+#       - name: _LOG_ID
+#         description: '{{ doc("cross_chain_event_log_id") }}'
+#         tests:
+#           - not_null
+#       - name: ORIGIN_FROM_ADDRESS
+#         description: '{{ doc("crosschain_lending_origin_from_address") }}'
+#         tests:
+#           - not_null
+#           - dbt_expectations.expect_column_values_to_match_regex:
+#               regex: 0[xX][0-9a-fA-F]+
+#       - name: ORIGIN_TO_ADDRESS
+#         description: '{{ doc("crosschain_lending_origin_to_address") }}'
+#         tests:
+#           - dbt_expectations.expect_column_values_to_match_regex:
+#               regex: 0[xX][0-9a-fA-F]+
