--- a/models/silver/labels/contract_autolabel/ethereum/silver__labels_contracts_polygon.yml
+++ b/models/silver/labels/contract_autolabel/ethereum/silver__labels_contracts_polygon.yml
@@ -48,4 +48,5 @@ models:
           - dbt_expectations.expect_column_values_to_be_in_type_list:
               column_type_list:
                 - TIMESTAMP_NTZ
+                - TIMESTAMP_LTZ
       
