--- a/models/silver/labels/contract_autolabel/ethereum/silver__labels_contracts_avalanche.yml
+++ b/models/silver/labels/contract_autolabel/ethereum/silver__labels_contracts_avalanche.yml
@@ -30,8 +30,6 @@ models:
         description: A high-level category describing the addresses main function or ownership
         tests:
           - not_null
-          - dbt_expectations.expect_column_values_to_be_in_set:
-              value_set: ['flotsam', 'nft', 'defi', 'dex', 'cex', 'dapp', 'token', 'operator', 'layer2', 'chadmin']
       - name: L2_LABEL
         description: A sub-category nested within label type providing further detail
         tests:
@@ -50,4 +48,5 @@ models:
           - dbt_expectations.expect_column_values_to_be_in_type_list:
               column_type_list:
                 - TIMESTAMP_NTZ
+                - TIMESTAMP_LTZ
       
