--- a/models/sources.yml
+++ b/models/sources.yml
@@ -306,3 +306,39 @@ sources:
     tables:
       - name: blocks_completeness
       - name: transactions_completeness
+  - name: ethereum_observ
+    database: ethereum
+    schema: silver_observability
+    tables:
+      - name: blocks_completeness
+      - name: logs_completeness
+      - name: receipts_completeness
+      - name: traces_completeness
+      - name: transactions_completeness
+  - name: polygon_observ
+    database: polygon
+    schema: silver_observability
+    tables:
+      - name: blocks_completeness
+      - name: logs_completeness
+      - name: receipts_completeness
+      - name: traces_completeness
+      - name: transactions_completeness
+  - name: bsc_observ
+    database: bsc
+    schema: silver_observability
+    tables:
+      - name: blocks_completeness
+      - name: logs_completeness
+      - name: receipts_completeness
+      - name: traces_completeness
+      - name: transactions_completeness
+  - name: arbitrum_observ
+    database: arbitrum
+    schema: silver_observability
+    tables:
+      - name: blocks_completeness
+      - name: logs_completeness
+      - name: receipts_completeness
+      - name: traces_completeness
+      - name: transactions_completeness
