--- a/models/sources.yml
+++ b/models/sources.yml
@@ -278,6 +278,11 @@ sources:
     schema: silver_dex
     tables:
       - name: complete_dex_swaps
+  - name: arbitrum_silver_dex
+    database: arbitrum
+    schema: silver_dex
+    tables:
+      - name: complete_dex_swaps
   - name: solana_silver
     database: solana
     schema: silver
