--- a/models/sources.yml
+++ b/models/sources.yml
@@ -91,6 +91,7 @@ sources:
       - name: transactions
       - name: contracts
       - name: complete_event_abis
+      - name: decoded_logs
   - name: arbitrum_core
     database: arbitrum
     schema: core
