--- a/models/sources.yml
+++ b/models/sources.yml
@@ -375,3 +375,8 @@ sources:
     schema: silver
     tables:
       - name: abis
+  - name: base_silver_dex
+    database: base
+    schema: silver_dex
+    tables:
+      - name: complete_dex_swaps
