new views schemas and folder changes + docs

--- a/models/core/core__ez_ENS.yml
+++ b/models/core/core__ez_ENS.yml
@@ -1,86 +1,4 @@
 version: 2
 models:
   - name: core__ez_ENS
-    tests:
-      - dbt_utils.unique_combination_of_columns:
-          combination_of_columns:
-            - TOKENID
-            - ENS_NAME
-    columns:
-      - name: BLOCK_TIMESTAMP
-        description: Block timestamp of the purchase/mint date of the ENS name
-        tests:
-          - not_null
-      - name: TX_HASH
-        description: Transaction Hash of the purchase/mint of the ENS name
-        tests:
-          - not_null
-      - name: OWNER
-        description: Address that the owns the ENS name.
-        tests:
-          - not_null
-          - dbt_expectations.expect_column_values_to_match_regex:
-              regex: 0[xX][0-9a-fA-F]+
-      - name: TOKENID
-        description: NFT tokenid for the ENS name
-        tests:
-          - not_null
-      - name: ENS_NAME
-        description: Actual ENS name (.ETH is removed from names)
-        tests:
-          - not_null
-      - name: ENS_SET
-        description: Either 'Y' or 'N' depending on if the ENS name is set to the owners address
-        tests:
-          - not_null
-      - name: COST
-        description: Cost initially paid for purchase of ENS name
-        tests:
-          - not_null
-      - name: EXPIRATION_TIME
-        description: Time (in UNIX) of the expiration of the ENS name
-        tests:
-          - not_null
-      - name: EXPIRATION_DATE
-        description: Date of the expiration of the ENS name
-        tests:
-          - not_null
-      - name: LABEL
-        description: Hex encoded nft tokenid for the ENS name 
-        tests:
-          - not_null
-      - name: NODE
-        description: The unique identifier of the ENS name and owner. 
-      - name: LAST_UPDATE_INFO
-        description: The date that the text information within the ENS was last updated.
-      - name: INFO_UPDATER
-        description: Address that last updated the ENS text information
-      - name: TWITTER
-        description: Twitter address contained within the ENS text information
-      - name: AVATAR
-        description: Avatar information contained within the ENS text information
-      - name: DISCORD
-        description: Discord handle contained within the ENS text information
-      - name: GITHUB
-        description: Github address contained within the ENS text information
-      - name: EMAIL
-        description: Email address contained within the ENS text information
-      - name: URL
-        description: URL contained within the ENS text information
-      - name: DESCRIPTION
-        description: Description contained within the ENS text information
-      - name: NOTICE
-        description: Notice contained within the ENS text information
-      - name: KEYWORDS
-        description: Keywords contained within the ENS text information
-      - name: REDDIT
-        description: Reddit address contained within the ENS text information
-      - name: TELEGRAM
-        description: Telegram handle contained within the ENS text information
-      - name: OPENSEA
-        description: Opensea name contained within the ENS text information
-      - name: RARIBLE
-        description: Rarible name contained within the ENS text information
-      - name: SUPERRARE
-        description: Superrare name contained within the ENS text information
-
+    description: Deprecating soon! This is a notice that we're replacing this table with `ens__ez_ens_domains`. Please migrate queries to the new table by 9/11/23. There will be no column changes or any other changes of any kind.
