--- a/models/core/core__dim_asset_metadata.yml
+++ b/models/core/core__dim_asset_metadata.yml
@@ -1,29 +1,5 @@
 version: 2
 models:
   - name: core__dim_asset_metadata
-    description: A comprehensive dimensional table holding all provider asset metadata and other relevant details pertaining to each token_address.
-    tests:
-      - dbt_utils.unique_combination_of_columns:
-          combination_of_columns:
-            - PROVIDER
-            - ID
-            - TOKEN_ADDRESS
-            - BLOCKCHAIN
-            - SYMBOL
-
-    columns:
-      - name: PROVIDER
-        description: The provider or source of the data.
-      - name: ID
-        description: The unique identifier representing the asset.
-      - name: NAME
-        description: The name of asset.
-      - name: SYMBOL
-        description: The symbol of asset.
-      - name: TOKEN_ADDRESS
-        description: The specific address representing the asset in a specific platform.
-      - name: BLOCKCHAIN
-        description: The platform where this asset has a token address.
-      - name: DECIMALS
-        description: The number of decimal places the token needs adjusted where token values exist.
+    description: Deprecating soon! This is a notice that we're replacing this table with `price__dim_asset_metadata`. Please migrate queries to the new table by 9/11/23. There will be no column changes or any other changes of any kind.
       
