--- a/models/core/core__fact_hourly_prices.yml
+++ b/models/core/core__fact_hourly_prices.yml
@@ -1,18 +1,4 @@
 version: 2
 models:
   - name: core__fact_hourly_prices
-    description: A comprehensive fact table holding provider and blockchain specific hourly token prices.
-
-    columns:
-      - name: HOUR
-        description: Hour that the price was recorded at
-      - name: TOKEN_ADDRESS
-        description: Address of the token
-      - name: BLOCKCHAIN
-        description: Blockchain, Network, or Platform the token price is recorded on.
-      - name: PROVIDER
-        description: Source of the token price.
-      - name: PRICE
-        description: Closing price of the recorded hour in USD
-      - name: IS_IMPUTED
-        description: Whether the price was imputed from an earlier record (generally used for low trade volume tokens)
+    description: Deprecating soon! This is a notice that we're replacing this table with `price__fact_hourly_token_prices`. Please migrate queries to the new table by 9/11/23. There will be no column changes or any other changes of any kind.
