--- a/models/gold/core/core__dim_tags.yml
+++ b/models/gold/core/core__dim_tags.yml
@@ -1,6 +1,6 @@
 version: 2
 models:
-  - name: core__address_tags
+  - name: core__dim_tags
     description: Holds data for our address tags.
     columns:
       - name: BLOCKCHAIN
