--- a/models/gold/core/core__dim_labels.yml
+++ b/models/gold/core/core__dim_labels.yml
@@ -1,6 +1,6 @@
 version: 2
 models:
-  - name: core__address_labels
+  - name: core__dim_labels
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
