--- a/models/gold/price/price__ez_asset_metadata.yml
+++ b/models/gold/price/price__ez_asset_metadata.yml
@@ -1,6 +1,6 @@
 version: 2
 models:
-  - name: core__ez_asset_metadata
+  - name: price__ez_asset_metadata
     description: A convenience table holding prioritized asset metadata and other relevant details pertaining to each token_address.
     tests:
       - dbt_utils.unique_combination_of_columns:
@@ -9,8 +9,6 @@ models:
             - BLOCKCHAIN
 
     columns:
-      - name: PROVIDER
-        description: The provider or source of the data.
       - name: ID
         description: The unique identifier representing the asset.
       - name: NAME
