--- a/models/gold/protocols/ens/ens__ez_ens_domains.yml
+++ b/models/gold/protocols/ens/ens__ez_ens_domains.yml
@@ -1,6 +1,6 @@
 version: 2
 models:
-  - name: core__ez_ENS
+  - name: ens__ez_ens_domains
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
